--- a/first.html
+++ b/first.html
@@ -3,8 +3,8 @@
 <head>
 <title>About one of the most influential person</title></head>
 <body>
-<p>1.<a href="C:\Users\pushp\OneDrive\Desktop\second.html">My photo</a><br>
-2.<a href="C:\Users\pushp\OneDrive\Desktop\third.html">My life</a><br>
-3.<a href="C:\Users\pushp\OneDrive\Desktop\four.html">My achievements</a><br>
+<p>1.<a href="https://www.dtmishra487.github.io/second.html">My photo</a><br>
+2.<a href="https://www.dtmishra487.github.io/third.html">My life</a><br>
+3.<a href="https://www.dtmishra487.github.io/four.html">My achievements</a><br>
 </p>
 <h4 style="color: pink"><marquee>Thanks for visiting!</marquee></h4></body></html>
