--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
 <head>
 <title>About one of the most influential person</title></head>
 <body>
-<p>1.<a href="https://dtmishra487.github.io/second.html">My photo</a><br>
+<p>1.<a href="second.html">My photo</a><br>
 2.<a href="https://www.dtmishra487.github.io/third.html">My life</a><br>
 3.<a href="https://www.dtmishra487.github.io/four.html">My achievements</a><br>
 </p>
