--- a/first.html
+++ b/first.html
@@ -4,7 +4,7 @@
 <title>About one of the most influential person</title></head>
 <body>
 <p>1.<a href="https://second.html">My photo</a><br>
-2.<a href="https://www.dtmishra487.github.io/third.html">My life</a><br>
-3.<a href="https://www.dtmishra487.github.io/four.html">My achievements</a><br>
+2.<a href="https://third.html">My life</a><br>
+3.<a href="https://four.html">My achievements</a><br>
 </p>
 <h4 style="color: pink"><marquee>Thanks for visiting!</marquee></h4></body></html>
