--- a/third.html
+++ b/third.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <html><head></head>
-<body><p>I am a good boy<br><br>Many people like me. I am an aspirational coder so I am currently learning Web developement. That's all. Below is a floating me.</p><a href="https://first.html">Return to main </a></head></html>
+<body><p>I am a good boy<br><br>Many people like me. I am an aspirational coder so I am currently learning Web developement. That's all. Below is a floating me.</p><a href="https://dtmishra487.github.io/first.html">Return to main </a></head></html>
