--- a/four.html
+++ b/four.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <html><head></head>
-<body><p>I qualified JEEM 2025 with 99.9515678 %ile</p><a href="https://first.html">Return to main </a></head></html>
+<body><p>I qualified JEEM 2025 with 99.9515678 %ile</p><a href="https://dtmishra487.github.io/first.html">Return to main </a></head></html>
