--- a/first.html
+++ b/first.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About one of the most influential person</title></head>
+<title>About one of the most influential persons</title></head>
 <body>
 <p>1.<a href="https://dtmishra487.github.io/second.html">My photo</a><br>
 2.<a href="https://dtmishra487.github.io/third.html">My life</a><br>
