--- a/dynamicpiano.html
+++ b/dynamicpiano.html
@@ -6,12 +6,18 @@
   </title>
   </head>
   <body>
-    <audio id="audio1"
+    <audio id="audio1" src="jane_meri_janeman.mp3"></audio>
     HEADPHONES LAGALO, BAAD ME MUJHE MAT BOLNA!
-  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEivdx-VnsGGKL2rB4ieGsSvsn4W-Za_dLTiHVhUvucJHIJf2mfLX1zJly8Snxy2Nj_SDO7Dgz_jmc2r84Zn1UJNvm170Q54d6QiRQ4IlcgblzTWZNKQcUdxoWH5F5BpHtZOhxuPkCd0rEAfNMvg5WgHRXkeg0Kxmarf00hk4iTWoFeuRNhMlslTsj_l6Z8/s321/Screenshot%202025-12-09%20181331.png">
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEivdx-VnsGGKL2rB4ieGsSvsn4W-Za_dLTiHVhUvucJHIJf2mfLX1zJly8Snxy2Nj_SDO7Dgz_jmc2r84Zn1UJNvm170Q54d6QiRQ4IlcgblzTWZNKQcUdxoWH5F5BpHtZOhxuPkCd0rEAfNMvg5WgHRXkeg0Kxmarf00hk4iTWoFeuRNhMlslTsj_l6Z8/s321/Screenshot%202025-12-09%20181331.png" onclick="paudio1()">
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQLLgcYh7yWcgaLMiT0ia6oDOSxVkbVyAHxe1qCCclGkY-ZVTDtgagP2z_-qqs_394niaJLd6irTVHLDf4SsGUYltxdSayquiG0YEaW14x7yMpkP_UJRgnFtAZe6aQP127gcfx_LcLRmbBtWPqFWjpzXhEMgLEB4JbUsF4e2Ilydb4gMYQpgSZIdR2saU/s328/Screenshot%202025-12-09%20181421.png">
  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEivdx-VnsGGKL2rB4ieGsSvsn4W-Za_dLTiHVhUvucJHIJf2mfLX1zJly8Snxy2Nj_SDO7Dgz_jmc2r84Zn1UJNvm170Q54d6QiRQ4IlcgblzTWZNKQcUdxoWH5F5BpHtZOhxuPkCd0rEAfNMvg5WgHRXkeg0Kxmarf00hk4iTWoFeuRNhMlslTsj_l6Z8/s321/Screenshot%202025-12-09%20181331.png">
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQLLgcYh7yWcgaLMiT0ia6oDOSxVkbVyAHxe1qCCclGkY-ZVTDtgagP2z_-qqs_394niaJLd6irTVHLDf4SsGUYltxdSayquiG0YEaW14x7yMpkP_UJRgnFtAZe6aQP127gcfx_LcLRmbBtWPqFWjpzXhEMgLEB4JbUsF4e2Ilydb4gMYQpgSZIdR2saU/s328/Screenshot%202025-12-09%20181421.png">
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEivdx-VnsGGKL2rB4ieGsSvsn4W-Za_dLTiHVhUvucJHIJf2mfLX1zJly8Snxy2Nj_SDO7Dgz_jmc2r84Zn1UJNvm170Q54d6QiRQ4IlcgblzTWZNKQcUdxoWH5F5BpHtZOhxuPkCd0rEAfNMvg5WgHRXkeg0Kxmarf00hk4iTWoFeuRNhMlslTsj_l6Z8/s321/Screenshot%202025-12-09%20181331.png">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQLLgcYh7yWcgaLMiT0ia6oDOSxVkbVyAHxe1qCCclGkY-ZVTDtgagP2z_-qqs_394niaJLd6irTVHLDf4SsGUYltxdSayquiG0YEaW14x7yMpkP_UJRgnFtAZe6aQP127gcfx_LcLRmbBtWPqFWjpzXhEMgLEB4JbUsF4e2Ilydb4gMYQpgSZIdR2saU/s328/Screenshot%202025-12-09%20181421.png"></body>
-  </html>
+ <script>
+   function paudio1() {
+     const a1=document.getElementById("audio1");
+     a1.currentTime=0;
+     a1.play();
+ </script>
+</html>
