--- a/dynamicpiano.html
+++ b/dynamicpiano.html
@@ -17,6 +17,6 @@
    function paudio1() {
      const a1=document.getElementById("audio1");
      a1.currentTime=0;
-     a1.play();
+     a1.play();}
  </script>
 </html>
