--- a/dynamicpiano.html
+++ b/dynamicpiano.html
@@ -19,29 +19,95 @@
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEivdx-VnsGGKL2rB4ieGsSvsn4W-Za_dLTiHVhUvucJHIJf2mfLX1zJly8Snxy2Nj_SDO7Dgz_jmc2r84Zn1UJNvm170Q54d6QiRQ4IlcgblzTWZNKQcUdxoWH5F5BpHtZOhxuPkCd0rEAfNMvg5WgHRXkeg0Kxmarf00hk4iTWoFeuRNhMlslTsj_l6Z8/s321/Screenshot%202025-12-09%20181331.png" onclick="paudio5()">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQLLgcYh7yWcgaLMiT0ia6oDOSxVkbVyAHxe1qCCclGkY-ZVTDtgagP2z_-qqs_394niaJLd6irTVHLDf4SsGUYltxdSayquiG0YEaW14x7yMpkP_UJRgnFtAZe6aQP127gcfx_LcLRmbBtWPqFWjpzXhEMgLEB4JbUsF4e2Ilydb4gMYQpgSZIdR2saU/s328/Screenshot%202025-12-09%20181421.png" onclick="paudio6()"></body>
  <script>
+   const a1=document.getElementById("audio1");
+   const a2=document.getElementById("audio2");
+   const a3=document.getElementById("audio3");
+   const a4=document.getElementById("audio4");
+   const a5=document.getElementById("audio5");
+   const a6=document.getElementById("audio6");
    function paudio1() {
-     const a1=document.getElementById("audio1");
-     a1.currentTime=0;
+     a1.pause();
+     a1.crrentTime=0;
+     a2.pause();
+     a2.currentTime=0;
+     a3.pause();
+     a3.currentTime=0;
+     a4.pause();
+     a4.currentTime=0;
+     a5.pause();
+     a5.currentTime=0;
+     a6.pause();
+     a6.currentTime=0;
      a1.play();}
    function paudio2() {
-     const a1=document.getElementById("audio2");
-     a1.currentTime=0;
-     a1.play();}
+      a1.pause();
+     a1.crrentTime=0;
+     a2.pause();
+     a2.currentTime=0;
+     a3.pause();
+     a3.currentTime=0;
+     a4.pause();
+     a4.currentTime=0;
+     a5.pause();
+     a5.currentTime=0;
+     a6.pause();
+     a6.currentTime=0;
+     a2.play();}
    function paudio3() {
-     const a1=document.getElementById("audio3");
-     a1.currentTime=0;
-     a1.play();}
+      a1.pause();
+     a1.crrentTime=0;
+     a2.pause();
+     a2.currentTime=0;
+     a3.pause();
+     a3.currentTime=0;
+     a4.pause();
+     a4.currentTime=0;
+     a5.pause();
+     a5.currentTime=0;
+     a6.pause();
+     a6.currentTime=0;
+     a3.play();}
    function paudio4() {
-     const a1=document.getElementById("audio4");
-     a1.currentTime=0;
-     a1.play();}
+     a1.pause();
+     a1.crrentTime=0;
+     a2.pause();
+     a2.currentTime=0;
+     a3.pause();
+     a3.currentTime=0;
+     a4.pause();
+     a4.currentTime=0;
+     a5.pause();
+     a5.currentTime=0;
+     a6.pause();
+     a6.currentTime=0;
+     a4.play();}
    function paudio5() {
-     const a1=document.getElementById("audio5");
-     a1.currentTime=0;
-     a1.play();}
+     a1.pause();
+     a1.crrentTime=0;
+     a2.pause();
+     a2.currentTime=0;
+     a3.pause();
+     a3.currentTime=0;
+     a4.pause();
+     a4.currentTime=0;
+     a5.pause();
+     a5.currentTime=0;
+     a6.pause();
+     a6.currentTime=0;
+     a5.play();}
    function paudio6() {
-     const a1=document.getElementById("audio6");
-     a1.currentTime=0;
-     a1.play();}
+      a1.pause();
+     a1.crrentTime=0;
+     a2.pause();
+     a2.currentTime=0;
+     a3.pause();
+     a3.currentTime=0;
+     a4.pause();
+     a4.currentTime=0;
+     a5.pause();
+     a5.currentTime=0;
+     a6.pause();
+     a6.currentTime=0;
+     a6.play();}
  </script>
 </html>
