--- a/chat.html
+++ b/chat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Global Chat</title>
+    <title>Talk to Shu!</title>
 </head>
 <body>
 
