--- a/chat.html
+++ b/chat.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h1>Global Message Board</h1>
+    <h1>Talk to Shu!</h1>
 
     <input type="text" id="userInput" placeholder="Type a message...">
     <button onclick="addMessage()">Send</button>
